[gd_scene load_steps=58 format=2]

[ext_resource path="res://floor_demo_full.gd" type="Script" id=1]
[ext_resource path="res://scenes/door_3.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/granite_base_1.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/text_2.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/statue_1.tscn" type="PackedScene" id=5]
[ext_resource path="res://pedestal.gd" type="Script" id=6]
[ext_resource path="res://scenes/statue_2.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/statue_3.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/granite_base_2.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/text_3.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/statue_4.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/granite_base_3.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/vase_6.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/vase_5.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/vase_3.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/vase_8.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/vase_4.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/spider_small.tscn" type="PackedScene" id=18]
[ext_resource path="res://scenes/vase_7.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/vase_1.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/vase_2.tscn" type="PackedScene" id=21]
[ext_resource path="res://scenes/text_1.tscn" type="PackedScene" id=22]
[ext_resource path="res://text_4.tscn" type="PackedScene" id=23]
[ext_resource path="res://torch_full.tscn" type="PackedScene" id=24]
[ext_resource path="res://scenes/column_3.tscn" type="PackedScene" id=25]
[ext_resource path="res://scenes/spider_web_1.tscn" type="PackedScene" id=26]
[ext_resource path="res://scenes/spider_web_2.tscn" type="PackedScene" id=27]
[ext_resource path="res://scenes/floor_demo_2.tscn" type="PackedScene" id=28]
[ext_resource path="res://scenes/floor_demo_floor_2.tscn" type="PackedScene" id=29]
[ext_resource path="res://scenes/floor_demo_ceiling_slabs.tscn" type="PackedScene" id=30]
[ext_resource path="res://scenes/apatha_add_1.tscn" type="PackedScene" id=31]
[ext_resource path="res://scenes/ceiling_moving_1.tscn" type="PackedScene" id=32]
[ext_resource path="res://scenes/ceiling_moving_1.gd" type="Script" id=33]
[ext_resource path="res://scenes/apatha_chest.tscn" type="PackedScene" id=34]
[ext_resource path="res://chest_bottom.gd" type="Script" id=35]
[ext_resource path="res://scenes/statues_postament_1.tscn" type="PackedScene" id=36]
[ext_resource path="res://scenes/statues_postament_2.tscn" type="PackedScene" id=37]
[ext_resource path="res://scenes/statues_postament_3.tscn" type="PackedScene" id=38]
[ext_resource path="res://scenes/apple_postament.tscn" type="PackedScene" id=39]
[ext_resource path="res://scenes/postament_flat.tscn" type="PackedScene" id=40]
[ext_resource path="res://scenes/statue_erida.tscn" type="PackedScene" id=41]
[ext_resource path="res://scenes/statue_ares.tscn" type="PackedScene" id=42]
[ext_resource path="res://scenes/statue_hermes.tscn" type="PackedScene" id=43]
[ext_resource path="res://scenes/door_demo.tscn" type="PackedScene" id=44]
[ext_resource path="res://scenes/vabtablack_demo.tscn" type="PackedScene" id=45]
[ext_resource path="res://scenes/postament_1.tscn" type="PackedScene" id=46]
[ext_resource path="res://scenes/postament_4.tscn" type="PackedScene" id=47]
[ext_resource path="res://scenes/door_debris.tscn" type="PackedScene" id=48]

[sub_resource type="CylinderShape" id=1]
radius = 0.266584
height = 0.324263

[sub_resource type="CylinderShape" id=2]
radius = 0.257959
height = 0.352295

[sub_resource type="CylinderShape" id=3]
radius = 0.265842
height = 0.353636

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.18048, 0.556927, 0.223631 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 2.60791, 2.67184, 4.90563 )

[sub_resource type="CylinderShape" id=6]
radius = 4.21339

[sub_resource type="BoxShape" id=7]
extents = Vector3( 2.22422, 1, 0.925723 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 2.10586, 1, 3.64931 )

[sub_resource type="BoxShape" id=9]
extents = Vector3( 0.791182, 0.02, 0.458979 )

[node name="floor_demo_full" type="Spatial"]
script = ExtResource( 1 )

[node name="door_3" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23.3506, 1.18912, 21.7773 )

[node name="granite_base_1" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22.3185, 0.881814, 20.9858 )

[node name="text_2" parent="granite_base_1" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.480825, 0.891173, 0.238459 )

[node name="pedestal_theatre" type="Spatial" parent="granite_base_1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.135, 0 )

[node name="statue_1" parent="granite_base_1/pedestal_theatre" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.362241, 0 )

[node name="StaticBody" type="StaticBody" parent="granite_base_1/pedestal_theatre"]
script = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="granite_base_1/pedestal_theatre/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.193828, 0 )
shape = SubResource( 1 )

[node name="pedestal_astronomy" type="Spatial" parent="granite_base_1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.104, 1.133, 0 )

[node name="statue_2" parent="granite_base_1/pedestal_astronomy" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.401248, 0 )

[node name="StaticBody" type="StaticBody" parent="granite_base_1/pedestal_astronomy"]
script = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="granite_base_1/pedestal_astronomy/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.191308, 0 )
shape = SubResource( 2 )

[node name="pedestal_history" type="Spatial" parent="granite_base_1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.165, 1.132, 0 )

[node name="statue_3" parent="granite_base_1/pedestal_history" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000479698, 0.443215, 0 )

[node name="StaticBody" type="StaticBody" parent="granite_base_1/pedestal_history"]
script = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="granite_base_1/pedestal_history/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0116434, -0.184777, 0 )
shape = SubResource( 3 )

[node name="granite_base_2" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23.5099, 1.29981, 27.7199 )

[node name="text_3" parent="granite_base_2" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.339883, 0.815664, 0.206286 )

[node name="pedestal_apata" type="Spatial" parent="granite_base_2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.011, 1.136, -0.022 )

[node name="statue_4" parent="granite_base_2/pedestal_apata" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.399997, 0 )

[node name="StaticBody2" type="StaticBody" parent="granite_base_2/pedestal_apata"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0109997, -1.136, 0.0220003 )
script = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="granite_base_2/pedestal_apata/StaticBody2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.575406, 0 )
shape = SubResource( 4 )

[node name="granite_base_4" parent="." instance=ExtResource( 12 )]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.0119, 1.2561, 22.9075 )

[node name="vase_6" parent="granite_base_4" instance=ExtResource( 13 )]
transform = Transform( 0.282367, 0.887932, 0.363104, 0.00872518, 0.376114, -0.926532, -0.959267, 0.26479, 0.0984549, -0.143509, 0.638411, -0.340303 )

[node name="vase_5" parent="granite_base_4" instance=ExtResource( 14 )]
transform = Transform( 0.266005, 0, 0.963972, 0, 1, 0, -0.963972, 0, 0.266005, -0.222795, 0.622285, 0 )

[node name="vase_3" parent="granite_base_4" instance=ExtResource( 15 )]
transform = Transform( -0.83682, 0, 0.547477, 0, 1, 0, -0.547477, 0, -0.83682, 0.06427, 0.614901, 0.188084 )

[node name="vase_8" parent="." instance=ExtResource( 16 )]
transform = Transform( 0.40287, 0, -0.915257, 0, 1, 0, 0.915257, 0, 0.40287, 1.05273, 1.63741, 19.4636 )

[node name="vase_4" parent="." instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18.2369, 1.26379, 30.471 )

[node name="vase_9" parent="." instance=ExtResource( 17 )]
transform = Transform( -0.743691, 0, 0.668523, 0, 1, 0, -0.668523, 0, -0.743691, 18.2236, 1.26801, 31.5064 )

[node name="vase_52" parent="." instance=ExtResource( 14 )]
editor/display_folded = true
transform = Transform( 0.412308, 0, 1.49416, 0, 1.55, 0, -1.49416, 0, 0.412308, 35.2237, 1.34907, 23.2499 )

[node name="spider_small" parent="vase_52" instance=ExtResource( 18 )]
transform = Transform( -0.432766, 0.368424, 0.305306, 0.448679, 0.455484, 0.0863439, -0.166239, 0.270243, -0.561754, 7.82013e-005, 0.631213, -0.0024662 )

[node name="granite_base_5" parent="." instance=ExtResource( 12 )]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27.4014, 1.32144, 23.0821 )

[node name="vase_7" parent="granite_base_5" instance=ExtResource( 19 )]
transform = Transform( -0.689322, 0, -0.724455, 0, 1, 0, 0.724455, 0, -0.689322, 0.27154, 0.613208, 0.145529 )

[node name="vase_1" parent="granite_base_5" instance=ExtResource( 20 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.50551, 0.61902, 0 )

[node name="vase_2" parent="granite_base_5" instance=ExtResource( 21 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0359497, 0.62297, -0.197407 )

[node name="text_1" parent="." instance=ExtResource( 22 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 21.6155, 2.85138, 19.805 )

[node name="text_4" parent="." instance=ExtResource( 23 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0903981, 4.16082, 12.7361 )

[node name="torch_full" parent="." instance=ExtResource( 24 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.94061, 3.964, 21.6072 )

[node name="torch_full2" parent="." instance=ExtResource( 24 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 29.5236, 2.66402, 33.9859 )

[node name="torch_full3" parent="." instance=ExtResource( 24 )]
transform = Transform( -4.37114e-008, 0, -1, 0, 1, 0, 1, 0, -4.37114e-008, 23.809, 2.66526, 40.8915 )

[node name="torch_full4" parent="." instance=ExtResource( 24 )]
transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, -3.55781, 3.964, 31.4475 )

[node name="torch_full5" parent="." instance=ExtResource( 24 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 29.5262, 2.66656, 26.8437 )

[node name="column_3" parent="." instance=ExtResource( 25 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.75205, 1.4724, 46.6765 )

[node name="column_35" parent="." instance=ExtResource( 25 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.91065, 1.4724, 39.3336 )

[node name="column_8" parent="." instance=ExtResource( 25 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 35.1028, 1.4724, 46.6765 )

[node name="column_12" parent="." instance=ExtResource( 25 )]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 35.2486, 1.4724, 38.5063 )

[node name="column_15" parent="." instance=ExtResource( 25 )]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, -33.8392, 1.4724, 38.7145 )

[node name="column_18" parent="." instance=ExtResource( 25 )]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, -27.2, 1.54929, 39.2085 )

[node name="column_21" parent="." instance=ExtResource( 25 )]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, -16.9348, 1.54929, 39.2085 )

[node name="column_13" parent="." instance=ExtResource( 25 )]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 35.2486, 1.4724, 29.2148 )

[node name="column_16" parent="." instance=ExtResource( 25 )]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, -33.8392, 1.4724, 29.423 )

[node name="column_19" parent="." instance=ExtResource( 25 )]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, -27.2544, 1.48259, 25.4323 )

[node name="column_32" parent="." instance=ExtResource( 25 )]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, -27.2544, 1.48259, 33.0753 )

[node name="column_22" parent="." instance=ExtResource( 25 )]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, -16.9892, 1.48259, 31.3499 )

[node name="column_14" parent="." instance=ExtResource( 25 )]
transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, 35.2486, 1.4724, 18.6844 )

[node name="column_17" parent="." instance=ExtResource( 25 )]
transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, -33.8392, 1.4724, 18.8926 )

[node name="column_20" parent="." instance=ExtResource( 25 )]
transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, -27.2399, 1.51882, 18.8926 )

[node name="column_23" parent="." instance=ExtResource( 25 )]
transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, -16.9747, 1.51882, 19.1959 )

[node name="column_24" parent="." instance=ExtResource( 25 )]
transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, -5.98095, 1.51882, 19.1959 )

[node name="column_28" parent="." instance=ExtResource( 25 )]
transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, 15.6133, 1.51882, 19.1959 )

[node name="column_30" parent="." instance=ExtResource( 25 )]
transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, 15.6133, 1.51882, 31.3841 )

[node name="column_26" parent="." instance=ExtResource( 25 )]
transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, -5.98095, 1.51882, 31.2623 )

[node name="column_25" parent="." instance=ExtResource( 25 )]
transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, -13.8673, 1.51882, 19.1959 )

[node name="column_29" parent="." instance=ExtResource( 25 )]
transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, 7.72689, 1.51882, 19.1959 )

[node name="column_31" parent="." instance=ExtResource( 25 )]
transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, 7.72689, 1.51882, 31.3841 )

[node name="column_27" parent="." instance=ExtResource( 25 )]
transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, -13.8673, 1.51882, 31.2623 )

[node name="column_4" parent="." instance=ExtResource( 25 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.9663, 1.56589, 46.7339 )

[node name="column_36" parent="." instance=ExtResource( 25 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.9526, 1.56589, 39.391 )

[node name="column_9" parent="." instance=ExtResource( 25 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 18.7726, 1.56589, 46.7339 )

[node name="column_33" parent="." instance=ExtResource( 25 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 15.4999, 1.56589, 39.3587 )

[node name="column_11" parent="." instance=ExtResource( 25 )]
transform = Transform( 0.000626878, 0, 1, 0, 1, 0, -1, 0, 0.000626878, 26.8828, 1.56589, 46.7338 )

[node name="column_5" parent="." instance=ExtResource( 25 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -33.7625, 1.51402, 46.4043 )

[node name="column_10" parent="." instance=ExtResource( 25 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.88818, 1.51402, 46.4043 )

[node name="column_6" parent="." instance=ExtResource( 25 )]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, -23.9187, 1.51402, 46.7765 )

[node name="column_7" parent="." instance=ExtResource( 25 )]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 10.8918, 1.51402, 46.7765 )

[node name="column_34" parent="." instance=ExtResource( 25 )]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 7.06699, 1.51402, 39.4013 )

[node name="spider_web_1" parent="." instance=ExtResource( 26 )]
transform = Transform( 0.464381, -0.5748, 0.673762, -0.816933, 0.015773, 0.576517, -0.342009, -0.818142, -0.462248, 33.9657, 6.35285, 46.8701 )

[node name="spider_small" parent="spider_web_1" instance=ExtResource( 18 )]
transform = Transform( 0.997327, -0.0728641, -0.00542351, 0.0724906, 0.996043, -0.0514135, 0.00914835, 0.0508827, 0.998663, 0, 0, 0 )

[node name="spider_web_2" parent="." instance=ExtResource( 27 )]
transform = Transform( -0.00284395, -0.887131, 0.461509, 0, -0.461511, -0.887134, 0.999996, -0.00252308, 0.00131254, 35.7145, 6.18291, 33.8711 )

[node name="spider_small" parent="spider_web_2" instance=ExtResource( 18 )]

[node name="AreaDeadEnd" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 33.0261, 4.169, 22.8255 )

[node name="CollisionShape" type="CollisionShape" parent="AreaDeadEnd"]
shape = SubResource( 5 )

[node name="AreaApata" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23.6681, 2.34447, 26.7986 )

[node name="CollisionShape" type="CollisionShape" parent="AreaApata"]
shape = SubResource( 6 )

[node name="AreaMuses" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23.3267, 2.493, 22.7039 )

[node name="CollisionShape" type="CollisionShape" parent="AreaMuses"]
shape = SubResource( 7 )

[node name="AreaApataDone" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.2812, 3.332, 27.1113 )

[node name="CollisionShape" type="CollisionShape" parent="AreaApataDone"]
shape = SubResource( 8 )

[node name="floor_demo_2" parent="." instance=ExtResource( 28 )]

[node name="floor_demo_floor_2" parent="." instance=ExtResource( 29 )]

[node name="floor_demo_ceiling_slabs" parent="." instance=ExtResource( 30 )]

[node name="apatha_add_1" parent="." instance=ExtResource( 31 )]

[node name="ceiling_moving_1" parent="." instance=ExtResource( 32 )]
script = ExtResource( 33 )

[node name="apatha_chest" parent="." instance=ExtResource( 34 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23.2349, 1.53994, 32.2104 )

[node name="chest_bottom" type="Spatial" parent="apatha_chest"]

[node name="StaticBody" type="StaticBody" parent="apatha_chest/chest_bottom"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.246602, 0 )
script = ExtResource( 35 )

[node name="CollisionShape" type="CollisionShape" parent="apatha_chest/chest_bottom/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0745938, 0 )
shape = SubResource( 9 )

[node name="statues_postament_1" parent="." instance=ExtResource( 36 )]
transform = Transform( -0.532055, 0, 0.84671, 0, 1, 0, -0.84671, 0, -0.532055, -22.5014, 1.29849, 27.3537 )

[node name="statues_postament_2" parent="." instance=ExtResource( 37 )]
transform = Transform( -0.962213, 0, -0.272297, 0, 1, 0, 0.272297, 0, -0.962213, -19.6244, 1.29849, 29.1794 )

[node name="statues_postament_3" parent="." instance=ExtResource( 38 )]
transform = Transform( 0.703002, 0, 0.711188, 0, 1, 0, -0.711188, 0, 0.703002, -25.2106, 1.2396, 29.0618 )

[node name="apple_postament" parent="." instance=ExtResource( 39 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -22.4693, 1.23571, 31.1517 )

[node name="postament_flat" parent="." instance=ExtResource( 40 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -22.0957, 1.34087, 20.4014 )

[node name="statue_erida" parent="postament_flat" instance=ExtResource( 41 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.48142, -0.0213776 )

[node name="postament_flat2" parent="." instance=ExtResource( 40 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.26774, 1.34087, 23.0791 )

[node name="statue_ares" parent="postament_flat2" instance=ExtResource( 42 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00500202, 1.52472, 0.00882149 )

[node name="postament_flat4" parent="." instance=ExtResource( 40 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.2357, 1.3005, 25.0336 )

[node name="statue_hermes" parent="postament_flat4" instance=ExtResource( 43 )]
transform = Transform( 0.411541, 0, 0.911391, 0, 1, 0, -0.911391, 0, 0.411541, 0.0152569, 1.52897, 0.0140724 )

[node name="door_demo" parent="." instance=ExtResource( 44 )]
transform = Transform( 1, 0, 0, 0, 0.998579, 0.0532947, 0, -0.0532947, 0.998579, -1.22734, 4.90979, 17.1417 )

[node name="vabtablack_demo" parent="." instance=ExtResource( 45 )]

[node name="postament_1" parent="." instance=ExtResource( 46 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.15181, 1.21748, 20.6024 )

[node name="postament_4" parent="." instance=ExtResource( 47 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.5163, 1.27446, 20.7609 )

[node name="postament_1_1" parent="." instance=ExtResource( 46 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.6506, 1.27446, 39.6931 )

[node name="door_debris" parent="." instance=ExtResource( 48 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.83106, 1.759, 33.1479 )
[connection signal="body_entered" from="AreaDeadEnd" to="." method="_on_AreaDeadEnd_body_entered"]
[connection signal="body_entered" from="AreaApata" to="." method="_on_AreaApata_body_entered"]
[connection signal="body_entered" from="AreaMuses" to="." method="_on_AreaMuses_body_entered"]
[connection signal="body_entered" from="AreaApataDone" to="." method="_on_AreaApataDone_body_entered"]
